<resources>
    <string name="app_name">Rosewell Beauty Parlour</string>

    <string name="title">Rosewell</string>

    <string name="adminModuleMenu">Admin Module</string>
    <string name="closeApp">Exit</string>

    <string name="dashboard">Dashboard</string>
    <string name="viewTransactions">Transactions</string>
    <string name="addMember">Members</string>
    <string name="addService">Services</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>

    <string name="public_drawer_open">Open public drawer</string>
    <string name="public_drawer_close">Close public drawer</string>

    <string name="admin_drawer_open">Open admin drawer</string>
    <string name="admin_drawer_close">Close admin drawer</string>

    <string name="loginDialogTitle">Admin Login</string>
    <string name="loginDialogText">Accessing the Admin Module requires a password. Please provide a password to proceed.</string>

    <string name="password_placeholder">Password</string>
    <string name="cancelLogin">Cancel</string>
    <string name="doLogin">Login</string>

    <string name="dash_fragment">Im a new  Dashboard fragment.</string>
    <string name="trans_fragment">Im a new Transaction fragment.</string>
    <string name="member_fragment">Im a new Members fragment.</string>
    <string name="service_fragment">Im a new Services fragment.</string>
    <string name="settings_fragment">Im a new Settings fragment.</string>


    <string name="fNameHint">First Name</string>
    <string name="lNameHint">Last Name</string>
    <string name="saveMemberBtn">Add Member</string>
    <string name="updateMemberBtn">Update Member</string>


    <string name="serviceTitleHint">Service Title</string>
    <string name="servicePriceHint">Service Price</string>
    <string name="saveServiceBtn">Add Service</string>

    <string name="transactionViewTitle">Select a member below to view their transactions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>