<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_rosewell_dashboard"
            android:title="@string/dashboard"/>
        <item
            android:id="@+id/viewTransactions"
            android:icon="@drawable/ic_rosewell_transactions"
            android:title="@string/viewTransactions"/>
        <item
            android:id="@+id/addMembers"
            android:icon="@drawable/ic_rosewell_add_member"
            android:title="@string/addMember"/>
        <item
            android:id="@+id/addServices"
            android:icon="@drawable/ic_rosewell_add_service"
            android:title="@string/addService"/>
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_rosewell_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_rosewell_exit"
            android:title="@string/logout"/>

    </group>
</menu>